# dadi

./: Main.hs  dadi.cabal  haskell-dadi.cabal  stack.yaml
app/: Main.hs
docs/: project.tex
src/: Api.hs  Check.hs
templates/: index.tt  new.tt  t.tt
templates/layouts/: main.tt
