name:                dadi
version:             0.1.0.0
homepage:            https://github.com/value/dadi#readme
license:             BSD3
license-file:        LICENSE
author:              value
maintainer:          value
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Check
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5,
                       random == 1.1,
                       uuid,
                       servant
  default-language:    Haskell2010

executable dadi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dadi
  default-language:    Haskell2010

test-suite dadi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dadi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/value/dadi
